<resources>
    <string name="app_name">Calories Per Dollar</string>
    <string name="servings_per_container">servings per container: </string>
    <string name="calories">calories: </string>
    <string name="price_per_container">price per container: </string>
    <string name="enter_number">enter a number</string>
    <string name="compute">compute</string>
    <string name="output">____ calories per dollar</string>
    <string name="clear">clear</string>
    <string name="weight_loss_calculator">weight loss calculator</string>
    <string name="weight">serving size (g or ml)</string>
    <string name="higher_score_more_weight_loss">higher score = more weight loss</string>
    <string name="weight_loss_score">weight loss score</string>


</resources>